Music commands completed