@@ -4,8 +4,8 @@ import net.duckycraftmc.discord.music.PlayerManager;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 import static net.duckycraftmc.discord.music.PlayerManager.isBotInVoice;
 
@@ -19,21 +19,23 @@ public class QueueCommand extends Command {
     @SuppressWarnings("all")
     @Override
     public void execute(SlashCommandInteractionEvent e) {
-        if (isBotInVoice) {
-            OptionMapping linkOption = e.getOption("link");
-            assert linkOption != null;
-            String link = linkOption.getAsString();
-            if (isUrl(link))
-                PlayerManager.getInstance().loadAndPlay(e.getGuild().getTextChannelById("747287295866044489"), link);
-            else e.reply("That is not a valid link!").setEphemeral(true).queue();
-        } else e.reply("I am not connected to a voice channel!").setEphemeral(true).queue();
+        if (e.getChannel().getId().equals("747287295866044489")) {
+            if (isBotInVoice) {
+                OptionMapping linkOption = e.getOption("link");
+                assert linkOption != null;
+                String link = linkOption.getAsString();
+                if (isUrl(link))
+                    PlayerManager.getInstance().loadAndPlay(e, link);
+                else e.reply("That is not a valid link!").setEphemeral(true).queue();
+            } else e.reply("I am not connected to a voice channel!").setEphemeral(true).queue();
+        } else e.reply("This command can only be used in <#747287295866044489>").queue();
     }
 
     public boolean isUrl(String url) {
         try {
-            new URI(url);
+            new URL(url);
             return true;
-        } catch (URISyntaxException e) {
+        } catch (MalformedURLException e) {
             return false;
         }
     }
